# Turkov-Demo

./: .directory  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.json
app/src/main/jni/: CMakeLists.txt  hello-jni.c  hkdf-sha1.c  hkdf-sha1.h  key-wrapper.c  key-wrapper.h  lcsx-rand.c  lcsx-rand.h  lib-base64.c  lib-base64.h  secure-wrapper.c  stream-wrapper.c  stream-wrapper.h  vscb.c  vscb.h  vssc.c  vssc.h
app/src/main/res/drawable/: selector_button_send.xml  selector_et_auth.xml  selector_radiobutton.xml  selector_spinner.xml  selector_switch_thumb.xml  shape_button_send_pressed.xml  shape_button_send_static.xml  shape_dropbox_background.xml  shape_et_auth_static.xml  shape_et_registration.xml  shape_expand_group.xml  shape_spinner_dropbox_focused.xml  shape_spinner_dropbox_static.xml  shape_spinner_static.xml  shape_switch_thumb_enable.xml  shape_switch_track_disable.xml  shape_switch_track_enable.xml  tollbar_bottom_gradient.xml  toolbar_gradient.xml
app/src/main/res/layout/: activity_about.xml  activity_additional_equipment.xml  activity_auth.xml  activity_edit_equipment.xml  activity_equipment.xml  activity_main.xml  activity_profile.xml  activity_registration.xml  activity_reset.xml  activity_schedule.xml  activity_setting_equipment.xml  activity_test.xml  fragment_code.xml  fragment_detail_convector.xml  fragment_detail_desiccant.xml  fragment_detail_ventilation.xml  fragment_email.xml  fragment_error.xml  fragment_new_password.xml  item_equipment.xml  (+9 more)
gradle/wrapper/: gradle-wrapper.properties
(+201 files in other folders)
